fixed spacing of  get your offer stuff

--- a/app/assets/stylesheets/pricing_page.scss
+++ b/app/assets/stylesheets/pricing_page.scss
@@ -120,8 +120,8 @@ hr-pricing {
   height: 100%;
   width: 100%;
   position: relative;
-  padding-top: 28px;
-  padding-bottom: 30px;
+  padding-top: 1.5em;
+  padding-bottom: 2.7em;
   margin-bottom: 1px;
 }
 
@@ -153,6 +153,8 @@ h2.header-2 {
 }
 .get-offer {
 	text-align: center;
+	padding-top: 1em;
+	padding-bottom: 1em;
 }
 
 
